# partcsv

./: README.md  pyproject.toml
partcsv/: __init__.py  core.py
partcsv/tests/: test_init.py
