[project]
name = "partcsv"
description = "Partition and write CSV files in parallel"
dynamic = ["version"]
authors = [{name = "Endre Márk Borza", email = "endremborza@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/endremborza/partcsv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "partcsv/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
